feat: add 'disabled' option (DateField)

--- a/src/DateField/DateField.stories.mdx
+++ b/src/DateField/DateField.stories.mdx
@@ -19,6 +19,12 @@ Using `DateField` creates an input with date picker.
 </Canvas>
 
 <Canvas>
+  <Story name="Disabled">
+    <Field component={DateField} disabled name="dateField.disabled" />
+  </Story>
+</Canvas>
+
+<Canvas>
   <Story name="With min and max dates">
     <Field
       component={DateField}
