feat: add 'isSwitch' option (CheckboxField)

--- a/src/CheckboxField/CheckboxField.stories.mdx
+++ b/src/CheckboxField/CheckboxField.stories.mdx
@@ -67,6 +67,18 @@ Using `CheckboxField` creates a checkbox input.
 </Canvas>
 
 <Canvas>
+  <Story name="Type `switch`">
+    <Field
+      component={CheckboxField}
+      isSwitch
+      label="Switch"
+      name="checkboxField.switchType"
+      type="checkbox"
+    />
+  </Story>
+</Canvas>
+
+<Canvas>
   <Story name="With error">
     <Field
       component={CheckboxField}
